# duplocloud-docker-mcp

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  Taskfile.yml  main.py  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docker/: Dockerfile  server.yaml  tools.json
duplocloud_mcp/: client.py  errors.py  server.py
duplocloud_mcp/tools/: containers.py  databases.py  hosts.py  services.py  storage.py  tenants.py
tests/: conftest.py  test_client.py  test_errors.py
tests/test_tools/: test_containers.py  test_databases.py  test_hosts.py  test_services.py  test_storage.py  test_tenants.py
